prover-ray/zkcdriver/testdata/synced/invalid/basic_15.zkc
//error:3:4-8:unknown variable
fn split(word:u32) -> (low:u8) {
   high::low = word
}
